--- a/timer.html
+++ b/timer.html
@@ -26,44 +26,15 @@
 
          Press <b>STOP</b> when you can’t focus anymore.</p>
     </div>
-    <button type="button" name="stop_btn" id="stopButton" onclick="jmp2LocalPage('index.html')">STOP</button>
+    <button type="button" name="stop_btn" id="stopButton" onclick="saveTime();">ADD</button>
   </div>
   <div id="widescreen">
-    <p>To witness all this AWESOMENESS!</p>
-    <h1>ROTATE your device to PORTRAIT view.</h1>
+    <h1>ROTATE YOUR DEVICE!</h1>
+    <img src="img/logo.png" alt="logo">
   </div>
   <!-- JAVASCRIPT-->
   <script src="js-main.js"></script>
-  <script>
-
-    var time = document.getElementById('timer'),
-        seconds = 0, minutes = 0, hours = 0, overallSeconds = 0,
-        t;
-
-    function timer() {
-        t = setTimeout(add, 1000);
-    }
-
-    function add() {
-        overallSeconds++;
-        seconds++;
-        if (seconds >= 60) {
-            seconds = 0;
-            minutes++;
-            if (minutes >= 60) {
-                minutes = 0;
-                hours++;
-            }
-        }
-
-        time.textContent = (hours ? (hours > 9 ? hours : "0" + hours) : "00") + ":" + (minutes ? (minutes > 9 ? minutes : "0" + minutes) : "00") + ":" + (seconds > 9 ? seconds : "0" + seconds);
-
-        timer();
-    }
-
-    timer();
-
-  </script>
+  <script src="js-timer.js"></script>
 </body>
 
 </html>
