--- a/history.html
+++ b/history.html
@@ -57,8 +57,8 @@
     </div>
   </div>
   <div id="widescreen">
-    <p>To witness all this AWESOMENESS!</p>
-    <h1>ROTATE your device to PORTRAIT view.</h1>
+    <h1>ROTATE YOUR DEVICE!</h1>
+    <img src="img/logo.png" alt="logo">
   </div>
   <!-- JAVASCRIPT-->
   <script src="js-main.js"></script>
