--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <!-- PAGE CONTENT -->
   <div class="homeWrapper">
     <header>
-      <div class="headerHours">1.2</div>
+      <div class="headerHours" id="totalHours">0.0</div>
       <h2 class="headerText">HOURS OF<br>
                               DEEP WORK</h2>
     </header>
