final take 6 (finished weekly)

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <button type="button" name="start_btn" class="dailyHistoryButton" onclick="jmp2LocalPage('history.html')">more ></button>
         </div>
         <div class="chart" id="chart-daily"></div>
-        <div class="chartFooter">Up 0.0 hours from yesterday!</div>
+        <div class="chartFooter">Up <span id="dailyDifference">0.0</span> hours from yesterday!</div>
       </div>
       <div class="chartContainer">
         <div class="chartHeader">
@@ -49,7 +49,7 @@
           <button type="button" name="start_btn" class="dailyHistoryButton" onclick="jmp2LocalPage('history.html')">more ></button>
         </div>
         <div class="chart" id="chart-weekly"></div>
-        <div class="chartFooter">Up 0.0 hours from yesterday!</div>
+        <div class="chartFooter">Up <span id="weeklyDifference">0.0</span> hours from last week!</div>
       </div>
     </main>
   </div>
