final take 7 (finished index)

--- a/history.html
+++ b/history.html
@@ -24,35 +24,15 @@
   </div>
   <div class="historyWrapper">
     <div class="dailyEntryContainer">
-      <div class="tableHeading">
-        <h4>DATE</h4>
-        <h4>TIME</h4>
-        <h4>START</h4>
-        <h4>END</h4>
-        <h4>X</h4>
-      </div>
       <div class="tableEntry">
-        <h4>11/15</h4>
-        <h4>1:06</h4>
-        <h4>2:30PM</h4>
-        <h4>3:36PM</h4>
-        <h4 class="historyDelete">X</h4>
+        <h4 id="dailyDate">12/16</h4>
+        <h4 id="dailyTotal">1.1 hours</h4>
       </div>
     </div>
     <div class="weeklyEntryContainer">
-      <div class="tableHeading">
-        <h4>WEEK</h4>
-        <h4>TIME</h4>
-        <h4>START</h4>
-        <h4>END</h4>
-        <h4>X</h4>
-      </div>
       <div class="tableEntry">
-        <h4>1</h4>
-        <h4>4:37</h4>
-        <h4>11/13</h4>
-        <h4>11/19</h4>
-        <h4 class="historyDelete">X</h4>
+        <h4>12/11</h4>
+        <h4>2.3 hours</h4>
       </div>
     </div>
   </div>
