final take 8 (finished history)

--- a/history.html
+++ b/history.html
@@ -23,17 +23,17 @@
     <h3 class="historyNavWeekly">WEEKLY</h3>
   </div>
   <div class="historyWrapper">
-    <div class="dailyEntryContainer">
-      <div class="tableEntry">
-        <h4 id="dailyDate">12/16</h4>
-        <h4 id="dailyTotal">1.1 hours</h4>
-      </div>
+    <div id="dailyEntryContainer">
+      <!-- <div class="tableEntry">
+        <h4>12/16</h4>
+        <h4>1.1 hours</h4>
+      </div> -->
     </div>
-    <div class="weeklyEntryContainer">
-      <div class="tableEntry">
+    <div id="weeklyEntryContainer">
+      <!-- <div class="tableEntry">
         <h4>12/11</h4>
         <h4>2.3 hours</h4>
-      </div>
+      </div> -->
     </div>
   </div>
   <div id="widescreen">
