final take 9 (fonts/jquery)

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link rel="shortcut icon" href="img/favicon.ico">
   <meta name="msapplication-config" content="img/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
-  <link href="https://fonts.googleapis.com/css?family=Lato|Yanone+Kaffeesatz" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Lato|Yanone+Kaffeesatz" rel="stylesheet"> -->
   <script src="jquery-3.2.1.min.js"></script>
   <script src="js-threesy.js"></script>
 </head>
